Apromore-Core-Components/Apromore-Portal/src/main/webapp/themes/ap/common/css/zk.css
/* ... */
.z-tab-text:hover {
    color: var(--ap-c-tab-text-hover);
}

.z-tab:hover .ap-icon {
    background-color: transparent;
    filter: var(--ap-c-tab-text-hover-filter);
}

.z-tabbox-left .z-tabs .z-tab,
.z-tabbox-right .z-tabs .z-tab {
    padding: 3px 8px;
}

/* Windows */

.z-window {
    background-color: var(--ap-c-bg-lighter);
}

.z-window-shadow {
    box-shadow: var(--ap-box-shadow-window);
}

.z-window .z-caption {
    font-size: var(--ap-font-size-base);
}

.z-window-content {
    padding: 0;
}

.z-window-modal,
.z-window-overlapped,
.z-messagebox-window {
    padding: 0;
    background-color: white;
    border-radius: 4px;
    border: 0;
}

.z-messagebox-window {
    /*
    background-image: linear-gradient(
      130deg,
      #fba522 0%,
      #f5e2e5 38%,
      #c7e6f2 100%
    );*/
    background-image: linear-gradient(
            130deg,
            var(--ap-c-maroon) 0%,
            var(--ap-c-grey-light-2) 38%,
            var(--ap-c-oceanic-dark-1) 100%
    );
    background-position: top left;
}

.z-window-overlapped .z-window-header,
.z-window-modal .z-window-header {
    padding: 10px 7px 0 10px;
    font-family: var(--ap-font-brand);
    font-size: 14px;
    color: black;
    line-height: 16px;
    height: var(--ap-header-height);
    /*
      background-color: #a44000;
      background-image: linear-gradient(30deg, #a44000 0%, #f96100 20%, #c7e6f2 60%);
    */
    background-image: var(--ap-grad-window-header);
    /* border-bottom: 1px solid var(--ap-c-grey-light-5) !important; */
}

.z-messagebox-window .z-window-header {
    padding: 9px 7px 0 10px;
    font-family: var(--ap-font-brand);
    font-size: 14px;
    color: white;
    line-height: 16px;
    height: var(--ap-header-height);
    /* border-bottom: 1px solid var(--ap-c-grey-light-5) !important; */
}

.z-window-modal .z-window-content {
    /* padding: 7px 10px 7px 7px; */
    padding: 0;
    font-family: var(--ap-font-base);
    font-size: 14px;
    background-color: transparent;
}

.z-messagebox-window .z-window-content {
    padding: 10px !important;
    font-family: var(--ap-font-base);
    font-size: 14px;
    background-color: rgba(255, 255, 255, 0.8);
}

/* Window icons */

/*
.z-messagebox-question {
  background-image: url(/dashboard/zkau/web/a60ebe8b/iceblue_c/zul/img/msgbox/question-btn.png)
}

.z-messagebox-exclamation {
  background-image: url(/dashboard/zkau/web/a60ebe8b/iceblue_c/zul/img/msgbox/warning-btn.png)
}

.z-messagebox-information {
  background-image: url(/dashboard/zkau/web/a60ebe8b/iceblue_c/zul/img/msgbox/info-btn.png)
}

.z-messagebox-error {
  background-image: url(/dashboard/zkau/web/a60ebe8b/iceblue_c/zul/img/msgbox/stop-btn.png)
}*/

.z-window-header .ap-icon {
    display: inline-block;
}

.z-window-header .z-caption-content {
    font-family: var(--ap-font-brand);
    vertical-align: top;
    padding: 0;
}

.z-window-header .z-toolbarbutton {
    vertical-align: top;
    overflow: visible;
    border: 0;
    padding: 0;
}

.z-window-header .z-toolbarbutton-content {
    padding: 0;
}

.z-window-modal .z-window-header .ap-icon,
.z-window-overlapped .z-window-header .ap-icon {
    position: relative;
    top: -4px;
    filter: var(--ap-filter-ico-grey-minor);
    background-size: auto 18px !important;
    background-color: transparent;
}

.z-window-header .ap-icon:hover {
    background-color: transparent;
    filter: var(--ap-filter-ico-normal-dark);
}

.z-window-header .z-toolbarbutton:hover,
.z-window-header .z-toolbarbutton:hover .z-toolbarbutton-content,
.z-window-header .z-toolbarbutton:focus,
.z-window-header .z-toolbarbutton:active {
    background-color: transparent;
}

.z-window-header .z-toolbarbutton:focus-visible,
.z-window-header .z-toolbarbutton .z-toolbarbutton-content:focus-visible,
.z-window-header .z-toolbarbutton .ap-icon:focus-visible {
    outline: none;
}

/* Window action icons */

.z-window-icon {
    font-size: 14px;
    margin: 0 0 0 7px;
    padding: 0;
    height: auto;
    line-height: normal;
}

/* Paging */

.z-paging-info {
    padding: 4px 0;
}

.z-paging-button {
    color: var(--ap-c-text-normal) !important;
    background-color: transparent !important;
}

.z-paging-button:focus {
    box-shadow: none !important;
}

.z-paging-button:hover {
    color: var(--ap-c-text-strong) !important;
    background-color: var(--ap-c-bg-lighter) !important;
}

.z-paging-button [class^="z-icon-"], .z-paging-text, .z-paging-input {
    font-size: 14px !important;
    line-height: 16px !important;
    vertical-align: middle;
}

/* Grid and listbox */

.z-listbox-header-border {
    border-bottom: 1px solid white !important;
}

.z-listheader {
    background-color: var(--ap-c-grid-head-bg);
    border: none;
    border-left: 1px solid white;
}

.z-listheader:first-child {
    border-left: none;
}

.z-listheader-content {
    text-align: center;
}

.z-listbox-header {
    background-color: var(--ap-c-grid-head-bg) !important;
}

.z-listbox-header-border {
    border-bottom-color: var(--ap-c-grid-head-bg);
}

.z-listheader-content,
.z-listcell-content,
.z-listgroup-content,
.z-listgroupfoot-content,
.z-listfooter-content {
    padding: 4px 5px 4px 5px;
    line-height: 20px;
    min-height: 32px;
}

.z-listitem.z-listitem-selected > .z-listcell {
    background-color: var(--ap-c-grid-row-bg-selected) !important;
    border-top: 0;
    border-bottom: 1px solid var(--ap-c-line-sep-selected);
}

.z-listitem:hover > .z-listcell {
    background: var(--ap-c-grid-row-bg-selected) !important;
}

.z-listitem .z-listcell {
    border-top: 0;
    border-bottom: 1px solid var(--ap-c-line-sep);
    background-color: transparent;
}

.z-listheader-sort .z-listheader-content:active {
    background: transparent;
}

.z-listheader-sort .z-listheader-sorticon {
    position: relative;
    display: inline-block;
    top: 0;
    left: 0;
    vertical-align: middle;
    line-height: 18px;
}
/* ... */

